First version of site

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -2,7 +2,9 @@
 layout: page
 title: Calendar
 image: /assets/images/singandstomplandscape.jpg
+tileable: true
 nav-menu: true
+order: 1
 ---
 
 {% capture currentUnixTimestamp %}{{ "now" | date: "%s" }}{% endcapture %}
