--- a/fiddle-camp/index.html
+++ b/fiddle-camp/index.html
@@ -9,15 +9,15 @@ order: 5
 
 <p>
 The <strong>Chicago Scottish Fiddle Camp</strong> is a weekend workshop for
-beginning to intermediate fiddlers. It its inaugural year it will take place on
+beginning to intermediate fiddlers. In its inaugural year it will take place on
 <strong>August 25 &amp; 26</strong> at Heritage Hall at the Scottish Home in Riverside, featuring group
 classes in Scottish fiddling and country dancing, a faculty concert, and a concluding performance by all
 students for the residents of <a href="http://www.caledoniaseniorliving.org/">The Scottish Home</a>.
 </p>
 
 <p>
-Students should have moderate experience playing any style of music on the violin, and should
-have an interest in Scottish music. There is no tuition (though free-will donations are accepted). Please
+Students should have moderate experience playing any style of music on the violin, and should have an interest in (but
+not necessarily experience with) Scottish music. There is no tuition (though free-will donations are accepted). Please
 <a href="mailto:tsmacdonald@gmail.com">email Tim</a> to reserve a spot.
 </p>
 
