Rejigger fid camp schedule

--- a/fiddle-camp/index.html
+++ b/fiddle-camp/index.html
@@ -52,11 +52,22 @@ The schedule will be as follows:
   <tr>
     <td>
       <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">11:15 – 12:30</span>
+      <span class="calendar-date-day">11:15 – 11:30</span>
       <span class="calendar-date-year"></span>
     </td>
     <td>
-      Country dancing for all
+      Wee break
+    </td>
+  </tr>
+
+  <tr>
+    <td>
+      <span class="calendar-date-month"></span>
+      <span class="calendar-date-day">11:30 – 12:30</span>
+      <span class="calendar-date-year"></span>
+    </td>
+    <td>
+      Second group class
     </td>
   </tr>
 
@@ -74,18 +85,18 @@ The schedule will be as follows:
   <tr>
     <td>
       <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">1:15 – 2:15</span>
+      <span class="calendar-date-day">1:15 – 2:30</span>
       <span class="calendar-date-year"></span>
     </td>
     <td>
-      Second group class
+      Country dancing for all
     </td>
   </tr>
 
   <tr>
     <td>
       <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">2:15 – 2:45</span>
+      <span class="calendar-date-day">2:30 – 3:00</span>
       <span class="calendar-date-year"></span>
     </td>
     <td>
@@ -96,18 +107,7 @@ The schedule will be as follows:
   <tr>
     <td>
       <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">2:45 – 3</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Break (feel free to bring a snack)
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">3 – 4</span>
+      <span class="calendar-date-day">3:00 – 4:00</span>
       <span class="calendar-date-year"></span>
     </td>
     <td>
