--- a/fiddle-camp/index.html
+++ b/fiddle-camp/index.html
@@ -2,6 +2,8 @@
 layout: page
 title: Chicago Scottish Fiddle Camp
 image: /assets/images/jink.jpg
+og_image: /assets/images/jink.jpg
+og_description: The Chicago Scottish Fiddle Camp is a weekend workshop for beginning to intermediate fiddlers.
 tileable: true
 nav-menu: true
 order: 5
