--- a/fiddle-camp/index.html
+++ b/fiddle-camp/index.html
@@ -11,134 +11,6 @@ order: 5
 
 <p>
 The <strong>Chicago Scottish Fiddle Camp</strong> is a weekend workshop for
-beginning to intermediate fiddlers. In its inaugural year it will take place on
-<strong>August 25 &amp; 26</strong> at Heritage Hall at the Scottish Home in Riverside, featuring group
-classes in Scottish fiddling and country dancing, a faculty concert, and a concluding performance by all
-students for the residents of <a href="http://www.caledoniaseniorliving.org/">The Scottish Home</a>.
-</p>
-
-<p>
-Students should have moderate experience playing any style of music on the violin, and should have an interest in (but
-not necessarily experience with) Scottish music. There is no tuition (though free-will donations are accepted). Please
-<a href="mailto:tsmacdonald@gmail.com">email Tim</a> to reserve a spot.
-</p>
-
-<p>
-The schedule will be as follows:
-</p>
-
-<h3>Saturday, August 25</h3>
-<table class="calendar">
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">9:30AM</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Setup / welcome
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">10 – 11:15</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      First group class
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">11:15 – 11:30</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Wee break
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">11:30 – 12:30</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Second group class
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">12:30 – 1:15</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Lunch (please bring a packed lunch)
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">1:15 – 2:30</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Country dancing for all
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">2:30 – 3:00</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Concert by <a href="http://www.timandjeremy.com">Tim Macdonald &amp; Jeremy Ward</a>
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">3:00 – 4:00</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Third group class
-    </td>
-  </tr>
-</table>
-
-<h3>Sunday, August 26</h3>
-<table class="calendar">
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">12PM</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Group class / rehearsal
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      <span class="calendar-date-month"></span>
-      <span class="calendar-date-day">2PM</span>
-      <span class="calendar-date-year"></span>
-    </td>
-    <td>
-      Whole-camp performance for residents of the Scottish Home
-    </td>
-  </tr>
-</table>
+beginning to intermediate fiddlers and will run on Augusut 24 and 25 in 2019.
+Its new website is <a href="http://thesesc.org/projects/fiddle-camp">here:
+  http://thesesc.org/projects/fiddle-camp</a>.
