--- a/fiddle-camp/index.html
+++ b/fiddle-camp/index.html
@@ -7,6 +7,7 @@ og_description: The Chicago Scottish Fiddle Camp is a weekend workshop for begin
 tileable: true
 nav-menu: true
 order: 5
+tileable: false
 ---
 
 <p>
